More changes for sqlite Dapper service classes change

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  
+  "ConnectionDBName": "Data Source=WeatherData_sqlite.db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
