--- a/dotnet31spa.csproj
+++ b/dotnet31spa.csproj
@@ -13,7 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.8" />
   </ItemGroup>
 
   <ItemGroup>
