--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "10.1.3",
     "@angular/platform-server": "10.1.3",
     "@angular/router": "10.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
